Implemented scheduler timeline chart.
Fixed algorithm bug not sorting by end time.
Lifted configuration provider to be above App.
Removed scaffolded image files.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/images/weather.css" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FF14 Fish Scheduler</title>
+  <title>FF14 Big Fish Scheduler (Beta)</title>
 </head>
 <body>
 <div id="root"></div>
