--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/images/bait.css" />
   <link rel="stylesheet" href="/images/fish.css" />
   <link rel="stylesheet" href="/images/weather.css" />
+  <link rel="stylesheet" href="/images/icons.css" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FF14 Big Fish Scheduler (Beta)</title>
